@@ -2786,9 +2786,9 @@ Z_matrix^(-1):
 
 Z_matrix * Z_matrix^(-1) [Identity matrix]:
 {
-1	-1.26218e-029	0	
-0	1	5.55112e-017	
-9.36751e-017	-2.92301e-016	1	
+1	9.46633e-030	3.9443e-030	
+0	1	0	
+8.91214e-017	-2.91217e-016	1	
 }
 
 Kr matrix:
