@@ -1,3 +1,9 @@
+
+2009-September-13 Struan Robertson
+
+	* ReactionManager.cpp: More minor changes in preparation to introduce extended 
+        precision into Bartis-Widom methods.
+
 2009-September-11 Dave Glowacki
 
   * update manual to add information on Spin Forbidden Crossing Code
@@ -63,7 +69,7 @@ _2009_08_24__11_49_48_ Chi-Hsiu Liang
 
 2009-August-16 Struan Robertson
 
-	* ReactionManager.cpp: Some minor changes to in preparation to introduce extended 
+	* ReactionManager.cpp: Some minor changes in preparation to introduce extended 
         precision into Bartis-Widom methods.
 
 2009-August-16 Struan Robertson
